@@ -9,18 +9,16 @@
   <version>1.0.0</version>
 
   <properties>
-    <!--<maven.compiler.source>17</maven.compiler.source>
-    <maven.compiler.target>17</maven.compiler.target>-->
-    <java.version>20</java.version>
+    <java.version>21</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <maven.compiler.release>${java.version}</maven.compiler.release>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <vaadin.version>24.1.6</vaadin.version>
-    <vertx.version>4.4.4</vertx.version>
+    <vaadin.version>24.1.10</vaadin.version>
+    <vertx.version>4.4.5</vertx.version>
     <mapstruct.version>1.5.5.Final</mapstruct.version>
-    <lombok.version>1.18.28</lombok.version>
+    <lombok.version>1.18.30</lombok.version>
     <poi.version>5.2.3</poi.version>
     <version.light-4j>2.1.18</version.light-4j>
   </properties>
@@ -28,7 +26,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>3.1.3</version>
+    <version>3.1.4</version>
   </parent>
 
   <dependencyManagement>
@@ -91,8 +89,8 @@
 
     <dependency>
       <groupId>in.virit</groupId>
-        <artifactId>viritin</artifactId>
-      <version>2.1.1</version>
+      <artifactId>viritin</artifactId>
+      <version>2.1.4</version>
     </dependency>
 
     <dependency>
@@ -110,6 +108,10 @@
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-undertow</artifactId>
        </dependency>-->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -119,10 +121,6 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-webflux</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -192,14 +190,14 @@
     <dependency>
       <groupId>io.github.bonigarcia</groupId>
       <artifactId>webdrivermanager</artifactId>
-      <version>5.5.0</version>
+      <version>5.5.3</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-test</artifactId>
-      <version>3.5.9</version>
+      <version>3.5.10</version>
       <scope>test</scope>
     </dependency>
 
@@ -339,7 +337,7 @@
     <dependency>
       <groupId>com.google.apis</groupId>
       <artifactId>google-api-services-gmail</artifactId>
-      <version>v1-rev20230703-2.0.0</version>
+      <version>v1-rev20230918-2.0.0</version>
     </dependency>
 
     <dependency>
@@ -364,7 +362,7 @@
     <dependency>
       <groupId>de.flapdoodle.embed</groupId>
       <artifactId>de.flapdoodle.embed.mongo</artifactId>
-      <version>4.9.1</version>
+      <version>4.9.2</version>
       <scope>test</scope>
     </dependency>
 
@@ -396,7 +394,7 @@
     <dependency>
       <groupId>org.xerial.snappy</groupId>
       <artifactId>snappy-java</artifactId>
-      <version>1.1.10.3</version>
+      <version>1.1.10.4</version>
     </dependency>
 
     <dependency>
@@ -418,9 +416,9 @@
           <source>${maven.compiler.source}</source>
           <target>${maven.compiler.target}</target>
           <release>${maven.compiler.release}</release>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
+<!--          <compilerArgs>-->
+<!--            <arg>&#45;&#45;enable-preview</arg>-->
+<!--          </compilerArgs>-->
           <annotationProcessorPaths>
             <path>
               <groupId>org.mapstruct</groupId>
@@ -455,7 +453,7 @@
         <!-- Clean build and startup time for Vaadin apps sometimes may exceed
              the default Spring Boot's 30sec timeout.  -->
         <configuration>
-          <!-- <mainClass>kyo.yaz.condominium.manager.Application</mainClass>-->
+           <mainClass>kyo.yaz.condominium.manager.Application</mainClass>
           <!-- <classifier>exec</classifier>-->
           <jvmArguments>-Xdebug -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5693</jvmArguments>
           <wait>500</wait>
